[tool.poetry]
name = "castle-creations-py"
version = "0.0.1"
description = ""
authors = ["seanavery <seanpollock3344@gmail.com>"]
readme = "README.md"
packages = [{include = "castle_creations_py"}]

[tool.poetry.dependencies]
python = "^3.8"
hid = "1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
